--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -5,4 +5,11 @@
 button {
   background-color: var(--primary);
   color: var(--on-primary);
+  padding: 8px 20px;
+  height: 40px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  border: 1px solid #0637F9;
+  border-radius: 4px;
 }
