--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -1,3 +1,5 @@
+@import '/src/sass/variables.scss';
+
 :host {
   display: inline-block;
 }
@@ -12,4 +14,13 @@ button {
   line-height: 24px;
   border: 1px solid #0637F9;
   border-radius: 4px;
+  transition: background-color 200ms;
+
+  &:hover {
+    background-color: $primaryHover;
+  }
+
+  &:active {
+    background-color: $primaryPressed !important;
+  }
 }
