--- a/src/app/users/components/users-list/users-list.component.html
+++ b/src/app/users/components/users-list/users-list.component.html
@@ -1,8 +1,13 @@
 <h1 class="text-muted title">Friends</h1>
 
-<ul class="users-list">
-  <li *ngFor="let user of users">
-    <app-user-list-item [user]="user"></app-user-list-item>
-  </li>
-</ul>
-<div class="container"></div>
+<ng-container *ngIf="loading; else usersListTemplate">
+  <app-spinner></app-spinner>
+</ng-container>
+
+<ng-template #usersListTemplate>
+  <ul class="users-list">
+    <li *ngFor="let user of users">
+      <app-user-list-item [user]="user"></app-user-list-item>
+    </li>
+  </ul>
+</ng-template>
