--- a/src/app/users/components/users-list/users-list.component.scss
+++ b/src/app/users/components/users-list/users-list.component.scss
@@ -1,3 +1,9 @@
+:host {
+  display: block;
+  background: rgba(255, 255, 255, 0.5);
+  padding: 30px 40px;
+}
+
 .users-list {
   list-style: none;
   padding: 0;
