--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,7 +1,11 @@
 $primary: #2E57FA;
 $onPrimary: #FFFFFF;
 
-$bgColor: #E5E5E5;
+$primaryHover: #0637F9;
+$primaryPressed: #052DCC;
+
+
+$bgColor: #F4F6FE;
 
 $shadow: 0px 10px 20px rgba(204, 208, 223, 0.5);
 
