--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -4,7 +4,7 @@
   display: inline-block;
 }
 
-button {
+.button {
   background-color: var(--primary);
   color: var(--on-primary);
   padding: 8px 20px;
