--- a/src/app/users/components/user-details/user-details.component.html
+++ b/src/app/users/components/user-details/user-details.component.html
@@ -1,49 +1,54 @@
-<app-avatar [src]="user!.img" [width]="150" [height]="150"></app-avatar>
+<ng-container *ngIf="loading; else userTemplate">
+  <app-spinner></app-spinner>
+</ng-container>
 
-<h1 class="title">{{ user!.first_name }} {{ user!.last_name }}</h1>
+<ng-template #userTemplate>
+  <app-avatar [src]="user!.img" [width]="150" [height]="150"></app-avatar>
 
-<a href="#" class="status">{{ user!.status || user!.statuses?.[0] }}</a>
+  <h1 class="title">{{ user!.first_name }} {{ user!.last_name }}</h1>
 
-<div class="profile-sections">
-  <app-tabset>
-    <app-tab title="Info">
-      <div class="label">Bio:</div>
-      <p class="bio">{{ user!.bio }}</p>
+  <a href="#" class="status">{{ user!.status || user!.statuses?.[0] }}</a>
 
-      <hr>
+  <div class="profile-sections">
+    <app-tabset>
+      <app-tab title="Info">
+        <div class="label">Bio:</div>
+        <p class="bio">{{ user!.bio }}</p>
 
-      <div class="data-row">
-        <div class="label">Phone:</div>
-        <div>{{ user!.phone }}</div>
-      </div>
+        <hr />
 
-      <hr>
+        <div class="data-row">
+          <div class="label">Phone:</div>
+          <div>{{ user!.phone }}</div>
+        </div>
 
-      <div class="data-row">
-        <div class="label">Address:</div>
-        <div>{{ user!.address_1 }}</div>
-      </div>
-      <div class="data-row">
-        <div class="label">City:</div>
-        <div>{{ user!.city }}</div>
-      </div>
-      <div class="data-row">
-        <div class="label">State:</div>
-        <div>{{ user!.state }}</div>
-      </div>
-      <div class="data-row">
-        <div class="label">Zipcode:</div>
-        <div>{{ user!.zipcode }}</div>
-      </div>
-      <div class="data-row">
-        <div class="label">Address:</div>
-        <div>{{ user!.address_1 }}</div>
-      </div>
-    </app-tab>
+        <hr />
 
+        <div class="data-row">
+          <div class="label">Address:</div>
+          <div>{{ user!.address_1 }}</div>
+        </div>
+        <div class="data-row">
+          <div class="label">City:</div>
+          <div>{{ user!.city }}</div>
+        </div>
+        <div class="data-row">
+          <div class="label">State:</div>
+          <div>{{ user!.state }}</div>
+        </div>
+        <div class="data-row">
+          <div class="label">Zipcode:</div>
+          <div>{{ user!.zipcode }}</div>
+        </div>
+        <div class="data-row">
+          <div class="label">Address:</div>
+          <div>{{ user!.address_1 }}</div>
+        </div>
+      </app-tab>
 
-    <app-tab title="Photos">
-      <app-gallery [photos]="user!.photos"></app-gallery>
-    </app-tab>
-  </app-tabset>
-</div>
+      <app-tab title="Photos">
+        <app-gallery [photos]="user!.photos"></app-gallery>
+      </app-tab>
+    </app-tabset>
+  </div>
+</ng-template>
