--- a/src/app/users/routes/user-detail-view/user-detail-view.component.html
+++ b/src/app/users/routes/user-detail-view/user-detail-view.component.html
@@ -1,1 +1,1 @@
-<app-user-details [user]="(user$|async)!"></app-user-details>
+<app-user-details [user]="(user$|async)!" [loading]="(loading$|async)!"></app-user-details>
