--- a/src/app/shared/components/image/image.component.html
+++ b/src/app/shared/components/image/image.component.html
@@ -1,1 +1,1 @@
-<div class="img-container"><img [src]="src" [alt]="alt" /></div>
+<div class="img-container"><img [src]="src" [alt]="alt" appImg /></div>
