--- a/src/app/modules/users/components/user-details/user-details.component.scss
+++ b/src/app/modules/users/components/user-details/user-details.component.scss
@@ -3,6 +3,10 @@
   background: rgba(255, 255, 255, 0.5);
   padding: 60px;
   position: relative;
+
+  @media (max-width: 574px) {
+    padding: 1.5rem 1rem;
+  }
 }
 
 .title {
@@ -41,4 +45,12 @@
   position: absolute;
   left: -94px;
   top: 0;
+  z-index: 100;
+
+  @media (max-width: 967px) {
+    left: unset;
+    right: 30px;
+    top: 30px;
+    background: rgba(0, 0, 0, 0.2);
+  }
 }
