--- a/src/app/modules/users/components/users-list/users-list.component.scss
+++ b/src/app/modules/users/components/users-list/users-list.component.scss
@@ -2,6 +2,10 @@
   display: block;
   background: rgba(255, 255, 255, 0.5);
   padding: 30px 40px;
+
+  @media (max-width: 574px) {
+    padding: 1.5rem 1rem;
+  }
 }
 
 .users-list {
